# mycelium

./: Cargo.toml  README.md  network.toml
ai_model/: neighbor_model.py  neighbor_weights.pth  self_config.yaml  self_model.py  self_weights.pth
src/: control.rs  main.rs  network.rs
src/ai_module/: mod.rs
src/config/: mod.rs
src/executor/: mod.rs
src/node/: ai_processes.rs  heuristics.rs  mod.rs  reconnect.rs  topology.rs
src/persistence/: mod.rs
src/proposal/: mod.rs
src/scenarios/: mod.rs
src/supervisor/: mod.rs
src/visualization/: dashboard-extra.js  dashboard.js  index.html  main.js  mod.rs  style.css
