[package]
name = "mycelium_light"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
futures-util = "0.3"
warp = { version = "0.4.1", features = ["websocket", "server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
rand = "0.10.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "1.1.0"